4. A new child component of the app has been created to render MUI cards for each area received back from the API call for a given outcode. Minor adjustments also made to the overall CSS to ensure better sizing and positioning (previously was not centered when full screen, and the border would not extend down the page when there was a large set of results)

--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,20 @@
 }
 
 .App {
-  height: 90vh;
-  width: 90vw;
+  height: 90%;
+  width: 100%;
   border: solid grey 2px;
+  padding: 20px;
 }
 
 .outcodeEntry {
   width: 400px;
+}
+
+.cardContainer {
+  margin-top: 30px;
+  padding: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
